Fix spacing issue in our approach section

--- a/less/home.less
+++ b/less/home.less
@@ -120,7 +120,7 @@
   @media @desktop-up {
     flex-direction: row;
     margin: 20px auto;
-    max-width: 100%;
+    max-width: 1140px;
   }
 }
 
@@ -153,6 +153,8 @@
 
     &--reverse {
       .Upsell(top, center, center);
+      margin: 40px auto 0;
+      padding: 30px 0 0;
     }
   }
 }
